# AirScout-Devel

./: Arbeitsdokumentierung.docx  Brainstorming Release V3.0.docx  ~$ainstorming Release V3.0.docx  ~WRL1539.tmp
AirScout V2.0 Release/Firmware V1.0/V1.0/: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  RPI Pico Airscout.code-profile  readme.md
AirScout V2.0 Release/Firmware V1.0/V1.0/lib/: CMakeLists.txt
AirScout V2.0 Release/Firmware V1.0/V1.0/lib/crypto-algorithms/: sha256.c  sha256.h
AirScout V2.0 Release/Firmware V1.0/V1.0/lib/dhcpserver/: CMakeLists.txt  dhcpserver.c
AirScout V2.0 Release/Firmware V1.0/V1.0/lib/dnsserver/: CMakeLists.txt
AirScout V2.0 Release/Firmware V1.0/V1.0/lib/fatfs/src/include/: ffconf.h
AirScout V2.0 Release/PCB V2.2/V2.0 - V2.2 - 22.12.2025/: AirScoutPCBV2.1.step  AirScoutPCBV2.2.step  AirScoutSchLibV2.0.SchLib  AirScoutSchLibV2.1.SchLib  AirScoutSchLibV2.2.SchLib  AirScout_SchematicsV2.0.SchDoc  AirScout_SchematicsV2.1.SchDoc  CAMtastic2.Cam  DPA_AirScout_5BHELSV2.1.BomDoc  DPA_AirScout_5BHELSV2.1.PrjPcb  DPA_AirScout_5BHELSV2.1.PrjPcbStructure
Past Versions/V0 - Geppl/AirScout2.0/: AirScout2.0.PrjPcb  CAMtastic1.Cam  Copy of PCB1.PcbDoc  PCB2.PcbDoc  Sheet1.SchDoc
Past Versions/V1.1 AirScout/: AirScoutSchLib.SchLib  AirScout_SchematicsV0_Spannungsversorgung.SchDoc  Blockschaltbild AirScoutV1.1.SchDoc  DPA_AirScout_5BHELS.BomDoc  DPA_AirScout_5BHELS.PrjPcb  DPA_AirScout_5BHELS.PrjPcbStructure  Job1.OutJob
Past Versions/V1.1 AirScout/Project Outputs for DPA_AirScout_5BHELS/: AirScout_PCBV1.1-macro.APR_LIB  AirScout_PCBV1.1.DRR  AirScout_PCBV1.1.EXTREP  AirScout_PCBV1.1.LDP  AirScout_PCBV1.1.REP  AirScout_PCBV1.1.apr  Design Rule Check - AirScout_PCBV1.drc  Design Rule Check - AirScout_PCBV1.html  Status Report.Txt
Past Versions/V1.1 AirScout/Project Outputs for Free Documents/: Status Report.Txt
Past Versions/V1.1 AirScout/__Previews/: AirScout_SchematicsV0_Spannungsversorgung.SchDocPreview  Blockschaltbild AirScoutV1.1.SchDocPreview
Past Versions/V2.0/: AirScoutPCBV2.0.PcbDoc  AirScoutSchLibV2.0.SchLib  AirScout_SchematicsV2.0.SchDoc  Blockschaltbild AirScoutV2.SchDoc  Copy of AirScoutPCBV2.0-save.PcbDoc  Copy ofAirScout_SchematicsV2.0.SchDoc  DPA_AirScout_5BHELSV2.0.PrjPcb  DPA_AirScout_5BHELSV2.0.PrjPcbStructure
Past Versions/V2.0/Project Outputs for DPA_AirScout_5BHELSV2.0/: Design Rule Check - AirScoutPCBV2.drc  (+1 more)
(+130 files in other folders)
